--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ website:
     left:
       - href: index.qmd
         text: Home
+      - about.qmd 
       - studies.qmd
       - data_topics.qmd
       - words_action.qmd
